--- a/src/posts/assets/styles/posts.css
+++ b/src/posts/assets/styles/posts.css
@@ -1,5 +1,49 @@
 /* CSS Styles for posts */
 
 .post {
-    margin-top: 2rem;
+  margin-top: 2rem;
+}
+#editor {
+  cursor: text;
+
+  * {
+    cursor: text;
+  }
+}
+[role="toolbar"].ql-toolbar {
+  .ql-formats {
+    button {
+      margin: 0;
+
+      height: 30px;
+    }
+  }
+}
+
+/*  dialog  */
+#dialogOverlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
+
+/* Stile per il dialogo */
+dialog {
+  border: none;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  width: 90% !important;
+  max-width: 500px !important;
+  text-align: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1001;
 }
