--- a/src/posts/assets/styles/posts.css
+++ b/src/posts/assets/styles/posts.css
@@ -27,10 +27,12 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.5);
   z-index: 1000;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Stile per il dialogo */
@@ -39,12 +41,58 @@ dialog {
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-  width: 90% !important;
-  max-width: 500px !important;
+  width: 90%;
+  max-width: 500px;
+  height: 90vh;
+  overflow: hidden;
   text-align: center;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1001;
+}
+
+#selectedThumbnail {
+  object-position: center;
+  object-fit: contain;
+  max-height: 500px;
+  display: block;
+  width: 100%;
+}
+
+.delete-post-confirm-dialog {
+  max-height: 250px;
+}
+
+#imageDialog {
+  max-width: 1000px;
+
+  .gallery {
+    overflow: scroll;
+    height: 100%;
+
+    img {
+      object-position: center;
+      object-fit: contain;
+      width: 100px;
+      height: 100px;
+      background: #fff7eb;
+      border-radius: 5px;
+      overflow: hidden;
+      margin: 5px 5px;
+      display: inline-block;
+    }
+  }
+}
+
+.image-placeholder {
+  width: 100%;
+  max-width: 400px;
+  height: 400px;
+  background-color: #fff7eb;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  button {
+    background-color: transparent;
+    font-size: 50px;
+    color: rgb(192, 124, 23);
+  }
 }
