--- a/src/pages/assets/styles/pages.css
+++ b/src/pages/assets/styles/pages.css
@@ -284,35 +284,47 @@
   }
 
   .books-section {
-    display: flex;
-    align-items: center;
-    gap: var(--spacing-lg);
     margin-bottom: var(--spacing-lg);
     padding: var(--spacing-md);
     border-radius: var(--border-radius);
     background-color: var(--beta);
 
     h2 {
-      color: rgba(255, 255, 255, 0.7);
+      color: var(--epsilon);
 
       @media (max-width: 768px) {
-        font-size: 1.5rem;
+        font-size: 2rem;
+        text-align: center;
       }
     }
 
-    .book-cover {
-      width: 300px;
-      height: auto;
-      border-radius: var(--border-radius);
-      overflow: hidden;
-      position: relative;
+    aside {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      flex-direction: column;
+      gap: 16px;
 
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-        object-position: center;
+      @media (min-width: 768px) {
+        justify-content: flex-start;
+        flex-direction: row;
+      }
+
+      .book-cover {
+        width: 300px;
+        height: auto;
         border-radius: var(--border-radius);
+        overflow: hidden;
+        position: relative;
+        flex-shrink: 0;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: contain;
+          object-position: center;
+          border-radius: var(--border-radius);
+        }
       }
     }
   }
