--- a/public/assets/styles/global_public.css
+++ b/public/assets/styles/global_public.css
@@ -341,6 +341,11 @@ h2 {
 /*  header */
 header {
   background-color: black;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
 }
 
 /*  nav */
@@ -354,7 +359,6 @@ header {
   transition: right 0.3s ease;
   overflow-y: auto;
   background-color: black;
-  border-left: 1px solid var(--alpha);
 }
 
 .mobile-drawer.show {
@@ -376,49 +380,54 @@ header {
   display: block;
 }
 
+/* for now, diactivate mobile menu */
 .navbarNav-bar {
   gap: 50px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+
+  @media (max-width: 768px) {
+    gap: 30px;
+  }
 }
 
 .navbarNav-bar a {
   color: var(--alpha);
 }
 
-@media (min-width: 768px) {
-  .navbarNav-bar {
-    flex-direction: row;
-    align-items: center;
-  }
+/* @media (min-width: 768px) { */
+.navbarNav-bar {
+  flex-direction: row;
+  align-items: center;
+}
 
-  .nav-toggle {
-    display: none !important;
-    background-color: black;
+.nav-toggle {
+  display: none !important;
+  background-color: black;
 
-    i {
-      color: var(--alpha);
-    }
-  }
-
-  .mobile-drawer {
-    position: static;
-    width: 100%;
-    height: auto;
-    right: auto;
-    display: block;
-    transition: none;
-  }
-
-  .overlay {
-    display: none !important;
+  i {
+    color: var(--alpha);
   }
 }
 
+.mobile-drawer {
+  position: static;
+  width: 100%;
+  height: auto;
+  right: auto;
+  display: block;
+  transition: none;
+}
+
+.overlay {
+  display: none !important;
+}
+/* } */
+
 .site-logo {
   display: block;
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
 }
