--- a/src/pages/assets/styles/pages.css
+++ b/src/pages/assets/styles/pages.css
@@ -11,7 +11,7 @@
     position: relative;
     width: 99.99vw;
     border: 3px solid black;
-    padding: 12px;
+    padding: 50px 0;
     position: relative;
     display: flex;
     align-items: center;
