--- a/src/pages/assets/styles/pages.css
+++ b/src/pages/assets/styles/pages.css
@@ -175,6 +175,22 @@
       }
     }
 
+    .subscribe-widget {
+      input {
+        background-color: var(--beta);
+        color: var(--theta);
+        padding: var(--spacing-sm) var(--spacing-md);
+        border-radius: var(--border-radius);
+        border: 1px solid var(--color-border);
+        width: 100%;
+        margin-bottom: var(--spacing-sm);
+
+        &::placeholder {
+          color: var(--theta);
+        }
+      }
+    }
+
     /* preliminaries */
     .page-container-home-preliminaries {
       width: 30%;
