--- a/public/assets/styles/global_admin.css
+++ b/public/assets/styles/global_admin.css
@@ -268,8 +268,8 @@ dialog {
 *********************************/
 .main-content-admin {
   @media (min-width: 800px) {
-    justify-content: start;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     display: flex;
     gap: 48px;
 
