--- a/public/assets/styles/global_public.css
+++ b/public/assets/styles/global_public.css
@@ -298,12 +298,14 @@ h1 {
     "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 5rem;
+  font-size: 4rem;
+  margin-bottom: 24px;
 }
 
 h2 {
-  font-size: 4rem;
+  font-size: 3.6rem;
   font-weight: 600;
+  margin-bottom: 24px;
 }
 
 /* Responsive */
