--- a/src/posts/assets/styles/posts.css
+++ b/src/posts/assets/styles/posts.css
@@ -105,6 +105,19 @@
   padding: 24px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
+  img {
+    max-width: 500px;
+    height: auto;
+    object-fit: contain;
+    object-position: left;
+    max-height: 500px;
+    width: 100%;
+
+    @media (max-width: 768px) {
+      max-width: 100%;
+    }
+  }
+
   .thumbnail {
     width: 100%;
     height: auto;
