--- a/public/assets/styles/global.css
+++ b/public/assets/styles/global.css
@@ -8,6 +8,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 24px;
 
   ul {
     list-style-type: none;
