--- a/src/posts/assets/styles/posts.css
+++ b/src/posts/assets/styles/posts.css
@@ -67,7 +67,7 @@
     overflow: scroll;
     height: 100%;
 
-    img {
+    img:not(.thumbnail) {
       object-position: center;
       object-fit: contain;
       width: 100px;
@@ -130,7 +130,7 @@
   padding: 24px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
-  img {
+  img:not(.thumbnail) {
     max-width: 500px;
     height: auto;
     object-fit: contain;
@@ -218,6 +218,60 @@
 
     @media (max-width: 768px) {
       font-size: 32px;
+    }
+  }
+}
+
+/* blog page */
+
+.blog-container {
+  margin: 100px auto 0;
+
+  h1 {
+    font-size: 48px;
+    margin: 0 0 24px 0;
+    border-bottom: 1px solid var(--epsilon);
+    padding-bottom: 24px;
+
+    @media (max-width: 768px) {
+      font-size: 32px;
+    }
+  }
+
+  input {
+    background-color: var(--epsilon);
+    color: var(--alpha);
+    padding: 16px;
+    border: none;
+    outline: none;
+
+    &::placeholder {
+      color: var(--alpha);
+    }
+  }
+
+  .blog-posts-list {
+    padding: 12px 24px;
+    background-color: white;
+
+    .blog-post {
+      background-color: white;
+      padding: 16px;
+      container-type: inline-size;
+      border-bottom: 1px solid var(--zeta);
+
+      .blog-thumbnail {
+        width: 300px;
+        height: 300px;
+        object-fit: cover;
+        object-position: center;
+        display: block;
+
+        @container (max-width: 600px) {
+          width: 100%;
+          height: 300px;
+        }
+      }
     }
   }
 }
